fix theme, refactor dimensions

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,7 +15,5 @@
   ~ limitations under the License.
   -->
 <resources>
-    <style name="Theme.Reply" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:windowTranslucentStatus">true</item>
-    </style>
+    <style name="Theme.Reply" parent="android:Theme.Material.Light.NoActionBar"/>
 </resources>
